<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/headlineArticle"
        android:layout_width="103dp"
        android:layout_height="59dp"
        android:layout_margin="10dp"
        android:text="@string/headlineTitle"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/abstractArticle"
        android:layout_width="245dp"
        android:layout_height="59dp"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:text="@string/searchAbstract"
        android:textSize="12dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="44dp" />

    <TextView
        android:id="@+id/urlArticle"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:text="@string/linkTitle"
        android:textSize="14dp"
        />

    <TextView
        android:id="@+id/pubDate"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:text="@string/searchDate"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="139dp" />


</LinearLayout>