<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Favourites">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/NYT_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/favouritesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favouriteTitle"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NYT_Toolbar" />

    <TextView
        android:id="@+id/headlineTitle"
        android:gravity="center"
        android:layout_width="113dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/headlineTitle"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouritesTitle" />

    <TextView
        android:id="@+id/linkTitle"
        android:gravity="center"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:autoLink="web"
        android:text="@string/linkTitle"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/headlineTitle"
        app:layout_constraintTop_toBottomOf="@+id/favouritesTitle" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewFavourites"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkTitle"
        app:layout_constraintVertical_bias="0.148" />

</androidx.constraintlayout.widget.ConstraintLayout>