<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NYTActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/NYT_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchText"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:hint="@string/searchText"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/helpButton"
        app:layout_constraintTop_toBottomOf="@+id/NYT_Toolbar" />

    <TextView
        android:id="@+id/headlineTitle"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/headlineTitle"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchText" />

    <TextView
        android:id="@+id/abstractArticle"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/searchAbstract"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/headlineTitle"
        app:layout_constraintTop_toBottomOf="@+id/searchText" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NYT_Toolbar"
        app:layout_constraintVertical_bias="0.004" />

    <ImageButton
        android:id="@+id/helpButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NYT_Toolbar"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <ImageButton
        android:id="@+id/favouritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/NYT_Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/NYT_Toolbar"
        app:layout_constraintTop_toTopOf="@+id/NYT_Toolbar"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abstractArticle"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/frameContainerSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchText"
        app:layout_constraintVertical_bias="0.0"
        />

    <FrameLayout
        android:id="@+id/frameContainerFavourites"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchText"
        app:layout_constraintVertical_bias="0.0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>